# ship-mcp

./: .env  DEPLOYMENT.md  Procfile  README.md  chainlit_app.py  chainlit_app_llm.py  deploy-button.md  env.example  mcp_chainlit_app.py  pyproject.toml  quick_start.py  render.yaml  requirements-minimal.txt  requirements-render-final.txt  requirements-render.txt  requirements.txt  start.sh  test_chainlit.py  test_enhanced_mcp_agent.py  test_gemini_extraction.py  test_incomplete_request.py  test_mcp.py  test_mcp_agent.py  test_memory_conversation.py  test_oauth.py  test_quick_extraction.py  test_specific_reservation.py
docs/: SETUP_GUIDE.md
scripts/: postman_converter.py  start_chainlit.sh  start_mcp.sh
src/ohip_mcp/: __init__.py  config.py  server.py
src/ohip_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ohip_mcp/api_clients/: oauth_client.py  ohip_client.py
src/ohip_mcp/chainlit_app/: __init__.py  app.py  gemini_client.py  gemini_client_fixed.py
src/ohip_mcp/langraph_workflows/: __init__.py  ohip_workflow.py
src/ohip_mcp/mcp_agent/: __init__.py  agent.py  agent_fixed.py
src/ohip_mcp/mcp_server/: __init__.py  server.py
venv311/: pyvenv.cfg
